--- a/0.4
+++ b/0.4
@@ -1,4 +1,5 @@
-sequenceDiagram
+```mermaid
+  sequenceDiagram
     participant browser
     participant server
 
@@ -31,3 +32,4 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+```
